# global-math-fabric

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml
.github/workflows/: daily-ledger-settlement.yml  generate-release-notes.yml  publish-macos-dmg-to-pages.yml  publish-pages.yml  refresh-sparkle-appcast.yml  release-android-play.yml  release-android.yml  release-binaries.yml  release-desktop.yml  release-ios-testflight.yml  release-macos.yml  release-native.yml
client/agent/: pyproject.toml
client/gmf_agent/: Cargo.toml
clients/gmf_mobile_flutter/: README.md  pubspec.yaml
core/gmf-core/: Cargo.toml
core/gmf-core/src/: lib.rs
docs/: FOR_FRIENDS.md
governance/rules/: registry.json  v1.json  v2.json
governance/signers/: guardian-1.ed25519.pub.pem  guardian-2.ed25519.pub.pem  guardian-3.ed25519.pub.pem  guardian_set_v1.json  guardian_set_v2.json  registry.json
governance/spec/: README_LONG_TIME.md
infra/: api.Dockerfile  worker.Dockerfile
ledger/identity/: public_ids.json
ledger/policies/: credit_policy_v2_bundle_v1.md  registry.json  sig_spec_v1.md
ledger/problems/: README.md
mobile/gmf_mobile/: README.md  pubspec.yaml
mobile/gmf_mobile/native/gmf_core_ffi/: Cargo.toml
mobile/gmf_mobile/native/gmf_core_ffi/src/: lib.rs
native/: Cargo.toml
native/gmf_agent/: Cargo.toml
native/gmf_agent/src/: main.rs  policy.rs
native/gmf_agent_core/: Cargo.toml
native/gmf_agent_core/src/: lib.rs
native/gmf_audit_final_verify/: Cargo.toml
native/gmf_canonical_export_verify/: Cargo.toml
native/gmf_credit_statement_final_verify/: Cargo.toml
native/gmf_export_audit_final_verify/: Cargo.toml
native/gmf_final_verify/: Cargo.toml
native/gmf_final_verify/src/: main.rs
native/gmf_ios_ffi/: Cargo.toml  gmf_ios_ffi.h
native/gmf_ios_ffi/src/: core_jobs.rs  lib.rs  rw_eq_v1.rs
native/gmf_ledger/: Cargo.toml
native/gmf_ledger/src/: main.rs
native/gmf_meta_audit_final_verify/: Cargo.toml
native/gmf_meta_audit_final_verify/src/: main.rs
native/gmf_mobile_ffi/: Cargo.toml
native/gmf_receipts/: Cargo.toml
native/gmf_report_verify/: Cargo.toml
native/gmf_worker/: Cargo.toml
native/gmf_worker/src/: helper_tasks.rs  main.rs
native/include/: gmf_mobile_ffi.h
packaging/macos/: sign_notarize_dmg.sh
releases/: INSTALL.md  android_play_link.txt  appcast.xml  index.html  ios_testflight_link.txt
releases/leaderboard/: credits_export.json  public_leaderboard.json
releases/ledger/: README.md
scripts/: pack_bundle.py
scripts/audit/: build_audit_bundles_manifest.py  build_audit_transcripts_manifest.py  build_daily_root_manifest.py  build_policies_manifest.py  build_policy_registry.py  build_verifications_manifest.py  build_xlinks_manifest.py  partition_receipts.py  update_audit_from_daily_roots.py  update_audit_from_manifests.py
scripts/autostart/: linux_systemd_user.sh  macos_launchagent.sh  windows_startup_shortcut.ps1
scripts/credits/: verify_credits_v1.py
scripts/cron/: daily_settle.sh
scripts/governance/: canon_json.py  certify_guardian_set_transition.sh  create_guardian_set.sh  gen_guardian_keys.sh  guardian_sign_msg.sh  hash_rules.sh  sign_rules_ed25519.sh  sign_rules_with_set.sh
scripts/installers/: install_unix.sh  install_windows.ps1
scripts/ledger/: append_receipt.py  checkpoint.sh  gen_server_key.sh  make_settlement.sh  merkle_root.py  prewarm_merkle_cache.py  rebuild_merkle_leaves.py
scripts/mirror/: mirror_to_git.sh
scripts/mobile/: build_android_ffi.sh  build_ios_ffi.sh
scripts/ops/: assemble_rules_amendment.py  assemble_signed_checkpoint.py  fetch_pending_checkpoint.sh  guardian_sign_pending_to_fragment.sh  install_cron_prewarm.sh  install_systemd_prewarm_timer.sh  make_rules_amendment_request.py  re_attest_checkpoint.sh  re_attest_msg.sh  submit_signed_checkpoint.sh
scripts/release/: check_sparkle_plist.sh  fetch_sparkle_tools.sh  generate_appcast_sparkle.sh  generate_appinstaller_msix.sh  generate_pages_base_and_landing.sh  generate_release_notes_html.sh  patch_flutter_version_from_tag.sh  publish_desktop_release.sh  set_macos_plist_version_from_tag.sh  sha256_file.sh  sparkle_generate_keys_local.sh  update_landing_from_latest_release.sh  update_sparkle_appcast.sh  version_from_tag.sh  write_play_changelog_from_tag.sh
scripts/security/: keygen_ed25519.py  sign_bundle_ed25519.py  verify_bundle_constitution.py  verify_proof_bundle.py  verify_proof_bundle_era_chain.py  verify_receipt_ed25519.py
server/api/: pyproject.toml
server/cron/: Dockerfile  run_daily_settle_loop.sh
server/gmf_relay/: Cargo.toml
server/gmf_relay/src/: main.rs
server/lean_worker/: Dockerfile  app.py
server/worker/: pyproject.toml
tasks/pool/: tasks.jsonl
tasks/templates/: matrix_rows.json  tasks_template.json
tools/audit/: export_audit_points.py
tools/credits/: export_credits.py  export_from_final.py  settle_day.sh
tools/credits_explorer/: leaderboard.py  make_proof_bundle.sh
tools/cron/: auto_finalize_last_month.sh  auto_finalize_last_year.sh
tools/install/: install.ps1  install.sh
tools/proofs/: make_public_proof_bundle.sh
trust/: public_keys.json
verifier/: Dockerfile  verifier.py
(+191 files in other folders)
