[package]
name = "gmf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
sha2 = "0.10"
hex = "0.4"

# Mobile-friendly WASM (interpreter). If version mismatches, adjust in Cargo.toml.
# wasm3 supports WASI-ish execution; if your toolchain complains, bump/downgrade this version.
wasm3 = "0.3"

# Policy helpers (optional; pure Rust)
sysinfo = "0.32"
battery = "0.7"
num_cpus = "1"
