[package]
name = "gmf_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
