[package]
name = "gmf_ios_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
hex = "0.4"
sha2 = "0.10"
serde = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
serde_json = "1"

gmf-core = { path = "../../../core/gmf-core" }
