[package]
name = "gmf_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
gmf_receipts = { path = "../gmf_receipts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
