[package]
name = "gmf_meta_audit_final_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
