[package]
name = "gmf_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
gmf_receipts = { path = "../../native/gmf_receipts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

num-bigint = "0.4"

num-traits = "0.2"

tempfile = "3"

rand = "0.8"
