[package]
name = "gmf_core_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
flutter_rust_bridge = "2"

gmf-core = { path = "../../../core/gmf-core" }
